feat: getting there...

--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,127 @@
-.lists {
-  display: flex;
-  gap: 16px;
+/* *,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+} */
+
+* {
+  font-family: system-ui;
+  box-sizing: border-box;
+}
+
+button {
+  display: block;
+}
+
+:root {
+  --background: rgb(163, 171, 187);
+  --section: rgb(177, 185, 202);
+  --task: rgb(191, 199, 216);
+  --delete-task: rgb(191, 199, 216);
+  --delete: rgb(223, 186, 186);
+  --add: rgb(191, 216, 208);
+}
+
+body {
+  background-color: var(--background);
+  /* min-height: 100%; */
 }
 
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
 }
 
-.list {
-  border: 1px solid black;
-  padding: 8px;
-}
+/* :root,
+body {
+  height: 100%;
+} */
 
-.todo {
-  border: 1px solid red;
-  padding-inline: 8px;
-}
-
-.checklist-items {
+.container {
+  min-height: 500px;
   display: flex;
+  gap: 16px;
+  align-items: start;
+}
+
+.section {
+  background-color: var(--section);
+  border-radius: 8px;
+  padding: 8px;
+  min-width: 200px;
+}
+
+.section__header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 4px;
+}
+
+.section__title {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.section__delete {
+  display: flex;
+  align-items: center;
+  line-height: 1;
+  border: none;
+  border-radius: 8px;
+  width: 32px;
+  justify-content: center;
+  background-color: var(--delete);
+}
+
+.section__tasks {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.task {
+  height: min(50px);
+  border-radius: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--task);
+  overflow: hidden;
+}
+
+.task__title {
+  flex-grow: 1;
+  padding-left: 8px;
+}
+
+.task__delete {
+  height: 100%;
+  width: 20px;
+  border: none;
+  background-color: var(--delete);
+}
+
+.add-section {
+  background-color: var(--add);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 8px;
+  min-width: 200px;
+}
+
+.add-task {
+  display: flex;
+  justify-content: center;
+  background-color: var(--add);
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
 }
